# mcp-server

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_ci.py  test_server.py
.github/: copilot-instructions.md
.github/workflows/: docker.yml  test.yml
data/: datasets.db.wal
datasets/: .gitkeep
src/data_query_server/: __main__.py  server.py
tests/: __init__.py  conftest.py  test_mcp_tools.py  test_server.py
